kubernetes/generated/manifests/prod/envoy-gateway/ReferenceGrant-allow-kubesystem-gateway-to-wildcard-tls.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-kubesystem-gateway-to-wildcard-tls
  namespace: security
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kube-system
  to:
    - group: ""
      kind: Secret
      name: wildcard-tls
