kubernetes/generated/manifests/prod/envoy-gateway/Gateway-default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
  name: default-gateway
  namespace: kube-system
spec:
  addresses:
    - type: IPAddress
      value: 10.11.0.1
  gatewayClassName: envoy
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-tls
            namespace: security
        mode: Terminate
