kubernetes/generated/manifests/prod/envoy-gateway/CiliumNetworkPolicy-allow-certgen-to-kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  name: allow-certgen-to-kube-apiserver-egress
  namespace: envoy-gateway-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      job-name: envoy-gateway-helm-certgen
