kubernetes/generated/manifests/prod/envoy-gateway/CiliumNetworkPolicy-allow-world-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-world-egress
  namespace: envoy-gateway-system
spec:
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "53"
              protocol: UDP
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: envoy-gateway-system
